[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'yesorno-runtime-wasm'
version = '1.0.0'
[dependencies.yesorno-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['yesorno-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
